# line-follower-and-traffic-light

puzzlebot_line_follower/: package.xml  setup.cfg  setup.py
puzzlebot_line_follower/config/: controllers.yaml
puzzlebot_line_follower/launch/: line_follow.launch.py  sim.launch.py
puzzlebot_line_follower/params/: line_follower_params.yaml
puzzlebot_line_follower/puzzlebot_line_follower/: line_follower_controller.py  line_light_detector.py  yolov8_detector.py
puzzlebot_line_follower/scripts/: traffic_light_controller.py
puzzlebot_line_follower/worlds/: track.world
yolo_ejecucion_computadora/puzzlebot_line_follower/: yolov8_detector.py
